Fix small errors (#59)

--- a/src/linalgwrap/CMakeLists.txt
+++ b/src/linalgwrap/CMakeLists.txt
@@ -86,7 +86,7 @@ install(FILES "${linalgwrap_BINARY_DIR}/src/linalgwrap/version_defs.hh"
 
 # Export the target specifications for linalgwrap.
 export(EXPORT LinalgwrapTargets
-	FILE "${PROJECT_BINARY_DIR}/linalgwrapTargets.cmake"
+	FILE "${linalgwrap_BINARY_DIR}/linalgwrapTargets.cmake"
 	NAMESPACE Upstream::
 )
 
