--- a/src/linalgwrap/CMakeLists.txt
+++ b/src/linalgwrap/CMakeLists.txt
@@ -32,6 +32,7 @@ set(LINALGWRAP_SOURCES
 	Base/Solvers/LinearSolverBaseKeys.cc
 	Base/Solvers/SolverStateBase.cc
 	Arpack/ArpackEigensolver.cc
+	Lapack/detail/lapack.cc
 	LinearSolver.cc
 	EigensystemSolver.cc
 	rescue.cc
