Add basic orthogonormalisation routine
The routine is a modified Gram-Schmidt, which is both slow and not
extremely numerically stable.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -38,6 +38,7 @@ set(LINALGWRAP_TESTS_SOURCES
 	# Helper classes
 	TypeUtilsTests.cc
 	RandomTests.cc
+	orthoTests.cc
 
 	# Lazy matrices
 	LazyMatrix_i_Tests.cc
