--- a/src/linalgwrap/CMakeLists.txt
+++ b/src/linalgwrap/CMakeLists.txt
@@ -39,9 +39,8 @@ set(LINALGWRAP_SOURCES
 	rescue.cc
 )
 
-# Dump the current version as an include file.
-include_krims_cmake_module(WriteVersionHeader)
-WRITE_VERSION_HEADER("${linalgwrap_BINARY_DIR}/src/linalgwrap/version_defs.hh")
+# Write the config file config.hh (into the binary dir)
+configure_file("config.hh.in" "config.hh")
 
 # add the libraries for Debug and Release:
 drb_add_library(linalgwrap
@@ -81,7 +80,7 @@ install(DIRECTORY .
 	COMPONENT devel
 	FILES_MATCHING PATTERN "*.hh"
 )
-install(FILES "${linalgwrap_BINARY_DIR}/src/linalgwrap/version_defs.hh"
+install(FILES "${linalgwrap_BINARY_DIR}/src/linalgwrap/config.hh"
 	DESTINATION "include/linalgwrap"
 	COMPONENT devel
 )
