Include config in headers with feature #ifdefs

--- a/src/linalgwrap/config.hh.in
+++ b/src/linalgwrap/config.hh.in
@@ -19,15 +19,19 @@
 
 #pragma once
 
-//
-// Definitions of features
-//
 #ifndef LINALGWRAP_HAVE_ARMADILLO
 // TODO The above guard is for compatiblity with downstream code.
 //      One should remove it once all have moved to use config.hh
 //      instead of the commandline flags.
 
+//
+// Definitions of features
+//
+#cmakedefine LINALGWRAP_HAVE_CXX14
+#cmakedefine LINALGWRAP_HAVE_CXX17
+
 #cmakedefine LINALGWRAP_HAVE_ARMADILLO
+#cmakedefine LINALGWRAP_HAVE_BOHRIUM
 
 #cmakedefine LINALGWRAP_HAVE_LAPACK
 #cmakedefine LINALGWRAP_HAVE_ARPACK
