Implement selection between stored matrices on C++ level

--- a/src/lazyten/config.hh.in
+++ b/src/lazyten/config.hh.in
@@ -35,4 +35,10 @@ namespace lazyten {
 #cmakedefine LAZYTEN_HAVE_LAPACK
 #cmakedefine LAZYTEN_HAVE_ARPACK
 
+//
+// Small matrix selection
+//
+#cmakedefine SMALL_MATRIX_ARMADILLO
+#cmakedefine SMALL_MATRIX_BOHRIUM
+
 }  // namespace lazyten
