Remove variable PackageModuleLocation

--- a/src/lazyten/CMakeLists.txt
+++ b/src/lazyten/CMakeLists.txt
@@ -92,6 +92,6 @@ export(EXPORT LazytenTargets
 install(EXPORT LazytenTargets
 	FILE "lazytenTargets.cmake"
 	NAMESPACE Upstream::
-	DESTINATION "${PackageModuleLocation}/lazyten"
+	DESTINATION "share/cmake/lazyten"
 )
 
