--- a/.travis.yml
+++ b/.travis.yml
@@ -120,3 +120,8 @@ after_success:
            --root ${PWD} --build-root ${PWD}/build
            --include src
     ;fi
+
+after_failure:
+  - cd ${TRAVIS_BUILD_DIR}/build
+  - cat CMakeCache.txt
+  - cat CMakeFiles/CMakeError.log
